--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,12 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-altair=4.2.0=pypi_0
-asttokens=2.0.5=pyhd3eb1b0_0
-attrs=22.2.0=pypi_0
-autopep8=2.0.1=pypi_0
-backcall=0.2.0=pyhd3eb1b0_0
-beautifulsoup4=4.11.1=pypi_0
-blinker=1.5=pypi_0
-ca-certificates=2022.10.11=h06a4308_0
-cachetools=5.2.0=pypi_0
-certifi=2022.12.7=py39h06a4308_0
-charset-normalizer=2.1.1=pypi_0
-click=8.1.3=pypi_0
-commonmark=0.9.1=pypi_0
-debugpy=1.5.1=py39h295c915_0
-decorator=5.1.1=pyhd3eb1b0_0
-deep-translator=1.9.1=pypi_0
-distro=1.8.0=pypi_0
-entrypoints=0.4=py39h06a4308_0
-et-xmlfile=1.1.0=pypi_0
-executing=0.8.3=pyhd3eb1b0_0
-gitdb=4.0.10=pypi_0
-gitpython=3.1.29=pypi_0
-idna=3.4=pypi_0
-importlib-metadata=5.2.0=pypi_0
-ipykernel=6.15.2=py39h06a4308_0
-ipython=8.7.0=py39h06a4308_0
-jedi=0.18.1=py39h06a4308_1
-jinja2=3.1.2=pypi_0
-jsonschema=4.17.3=pypi_0
-jupyter_client=7.4.8=py39h06a4308_0
-jupyter_core=4.11.2=py39h06a4308_0
-ld_impl_linux-64=2.38=h1181459_1
-libffi=3.4.2=h6a678d5_6
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libsodium=1.0.18=h7b6447c_0
-libstdcxx-ng=11.2.0=h1234567_1
-lxml=4.9.2=pypi_0
-markupsafe=2.1.1=pypi_0
-matplotlib-inline=0.1.6=py39h06a4308_0
-ncurses=6.3=h5eee18b_3
-nest-asyncio=1.5.5=py39h06a4308_0
-numpy=1.24.0=pypi_0
-openai=0.25.0=pypi_0
-openpyxl=3.0.10=pypi_0
-openssl=1.1.1s=h7f8727e_0
-packaging=22.0=py39h06a4308_0
-pandas=1.5.2=pypi_0
-pandas-stubs=1.5.2.221213=pypi_0
-parso=0.8.3=pyhd3eb1b0_0
-pdf2image=1.16.0=pypi_0
-pexpect=4.8.0=pyhd3eb1b0_3
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=9.3.0=pypi_0
-pip=22.3.1=py39h06a4308_0
-prompt-toolkit=3.0.20=pyhd3eb1b0_0
-protobuf=3.20.3=pypi_0
-psutil=5.9.0=py39h5eee18b_0
-ptyprocess=0.7.0=pyhd3eb1b0_2
-pure_eval=0.2.2=pyhd3eb1b0_0
-pyarrow=10.0.1=pypi_0
-pyaudio=0.2.13=pypi_0
-pycodestyle=2.10.0=pypi_0
-pydeck=0.8.0=pypi_0
-pygments=2.11.2=pyhd3eb1b0_0
-pympler=1.0.1=pypi_0
-pyrsistent=0.19.2=pypi_0
-pyside6=6.4.1=pypi_0
-pyside6-addons=6.4.1=pypi_0
-pyside6-essentials=6.4.1=pypi_0
-pytesseract=0.3.10=pypi_0
-python=3.9.15=h7a1cb2a_2
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-docx=0.8.11=pypi_0
-pyttsx3=2.90=pypi_0
-pytz=2022.7=pypi_0
-pytz-deprecation-shim=0.1.0.post0=pypi_0
-pyzmq=23.2.0=py39h6a678d5_0
-readline=8.2=h5eee18b_0
-requests=2.28.1=pypi_0
-rich=12.6.0=pypi_0
-semver=2.13.0=pypi_0
-setuptools=65.5.0=py39h06a4308_0
-shiboken6=6.4.1=pypi_0
-six=1.16.0=pyhd3eb1b0_1
-smmap=5.0.0=pypi_0
-soupsieve=2.3.2.post1=pypi_0
-speechrecognition=3.9.0=pypi_0
-sqlite=3.40.0=h5082296_0
-stack_data=0.2.0=pyhd3eb1b0_0
-streamlit=1.16.0=pypi_0
-tabula-py=2.6.0=pypi_0
-tk=8.6.12=h1ccaba5_0
-toml=0.10.2=pypi_0
-tomli=2.0.1=pypi_0
-toolz=0.12.0=pypi_0
-tornado=6.2=py39h5eee18b_0
-tqdm=4.64.1=pypi_0
-traitlets=5.7.1=py39h06a4308_0
-types-pytz=2022.7.0.0=pypi_0
-typing-extensions=4.4.0=pypi_0
-tzdata=2022.7=pypi_0
-tzlocal=4.2=pypi_0
-urllib3=1.26.13=pypi_0
-validators=0.20.0=pypi_0
-watchdog=2.2.0=pypi_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-wheel=0.37.1=pyhd3eb1b0_0
-xz=5.2.8=h5eee18b_0
-zeromq=4.3.4=h2531618_0
-zipp=3.11.0=pypi_0
-zlib=1.2.13=h5eee18b_0
+SpeechRecognition==3.8.1
+pyttsx3==2.90
+PyQt5==5.15.6
+fpdf==1.7.2
+pytesseract
+deep_translator
+openai
+tabula
+pandas
+StringIO
+pdf2image
+
